<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FilmeEspecificoActivity">

    <ImageView
        android:id="@+id/iv_fundo_poster_filme_especifico"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_estrela"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_fundo_escuro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black_medium"
        app:layout_constraintBottom_toTopOf="@id/tv_descricao_filme"
        app:layout_constraintEnd_toEndOf="@id/iv_fundo_poster_filme_especifico"
        app:layout_constraintStart_toStartOf="@id/iv_fundo_poster_filme_especifico"
        app:layout_constraintTop_toTopOf="@id/iv_fundo_poster_filme_especifico" />

    <TextView
        android:id="@+id/tv_nome_filme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@id/iv_fundo_escuro"
        app:layout_constraintStart_toStartOf="@id/iv_fundo_escuro"/>

    <ImageView
        android:id="@+id/estrela"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_estrela"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_nome_filme"
        app:layout_constraintEnd_toStartOf="@id/tv_nota_filme"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_nota_filme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/estrela"
        app:layout_constraintTop_toTopOf="@id/estrela"
        app:layout_constraintStart_toEndOf="@+id/estrela"/>

    <ImageView
        android:id="@+id/iv_poster_filme_especifico"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_fundo_poster_filme_especifico"
        app:layout_constraintStart_toStartOf="@id/iv_fundo_poster_filme_especifico"
        app:layout_constraintTop_toBottomOf="@id/tv_nota_filme" />

    <TextView
        android:id="@+id/btn_assistir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:theme="@style/AppTheme.Button.Green"
        android:text="@string/assistir"
        app:layout_constraintEnd_toEndOf="@+id/iv_fundo_poster_filme_especifico"
        app:layout_constraintStart_toEndOf="@+id/iv_poster_filme_especifico"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btn_download"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/download"
        android:layout_marginTop="5dp"
        android:theme="@style/AppTheme.Button.Black"
        android:background="@color/black_medium"
        app:layout_constraintEnd_toEndOf="@+id/btn_assistir"
        app:layout_constraintStart_toStartOf="@+id/btn_assistir"
        app:layout_constraintTop_toBottomOf="@+id/btn_assistir" />

    <TextView
        android:id="@+id/btn_add_lista"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_a_lista"
        android:layout_marginTop="5dp"
        android:theme="@style/AppTheme.Button.Green"
        android:background="@drawable/button_preto_borda_arredondada"
        app:layout_constraintEnd_toEndOf="@+id/btn_download"
        app:layout_constraintStart_toStartOf="@+id/btn_download"
        app:layout_constraintTop_toBottomOf="@+id/btn_download" />

    <TextView
        android:id="@+id/btn_trailer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/assistir_trailer"
        android:layout_marginTop="5dp"
        android:theme="@style/AppTheme.Button.Green"
        android:background="@drawable/button_preto_borda_arredondada"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_lista"
        app:layout_constraintStart_toStartOf="@+id/btn_add_lista"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_lista" />

    <TextView
        android:id="@+id/tv_descricao_filme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_fundo_poster_filme_especifico"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_info_filme_especifico"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_descricao_filme"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>